# BrandForge

./: .gitignore  CLAUDE.md  Dockerfile  LOG.md  README.md  SESSION_INIT.md  cloudbuild.yaml  firestore.rules  memory.md  pyproject.toml  test_output.txt
brandforge/: __init__.py  agent.py  api.py
brandforge/agents/: __init__.py
brandforge/agents/analytics/: __init__.py  agent.py  prompts.py  tools.py
brandforge/agents/brand_memory/: __init__.py  agent.py  prompts.py  tools.py
brandforge/agents/brand_strategist/: __init__.py  agent.py  prompts.py  tools.py
brandforge/agents/campaign_assembler/: __init__.py  agent.py  prompts.py  tools.py
brandforge/agents/competitor_intel/: __init__.py  agent.py  prompts.py  tools.py
brandforge/agents/copy_editor/: __init__.py  agent.py  prompts.py  tools.py
brandforge/agents/distribution_orchestrator/: __init__.py  agent.py
brandforge/agents/format_optimizer/: __init__.py  agent.py  prompts.py  tools.py
brandforge/agents/image_generator/: __init__.py  agent.py  prompts.py  tools.py
brandforge/agents/mood_board/: __init__.py  agent.py  prompts.py  tools.py
brandforge/agents/mood_board_director/: __init__.py  agent.py  tools.py
brandforge/agents/orchestrator/: __init__.py  agent.py  tools.py
brandforge/agents/post_scheduler/: __init__.py  agent.py  prompts.py  tools.py
brandforge/agents/production_orchestrator/: __init__.py  agent.py
brandforge/agents/publisher/: __init__.py  agent.py  mcp_config.py  prompts.py  tools.py
brandforge/agents/qa_inspector/: __init__.py  agent.py  prompts.py  tools.py
brandforge/agents/sage/: __init__.py  agent.py  prompts.py  tools.py
brandforge/agents/scriptwriter/: __init__.py  agent.py  prompts.py  tools.py
brandforge/config/: __init__.py  platform_specs.py
brandforge/demo/: __init__.py  constants.py
brandforge/shared/: __init__.py  config.py  firestore.py  models.py  pubsub.py  retry.py  storage.py  utils.py  video_utils.py
deploy/.adk/: session.db
deploy/cloudrun/: service.yaml
docs/: architecture.md  demo-video-script.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/lib/: api.js  (+2 more)
scripts/: bootstrap.sh  seed_secrets.sh
scripts/.adk/: session.db
tests/: conftest.py  test_production_pipeline.py
tests/analytics/: test_analytics.py
tests/brand_memory/: __init__.py  test_brand_memory.py
tests/brand_strategist/: __init__.py  test_brand_strategist.py
tests/campaign_assembler/: test_assembler.py
tests/competitor_intel/: __init__.py  test_competitor.py
tests/copy_editor/: __init__.py  test_copyeditor.py
tests/demo/: test_demo_mode.py  test_infra_panel.py  test_submission.py
tests/format_optimizer/: test_format_optimizer.py
tests/image_generator/: __init__.py  test_imagegen.py
tests/infra/: test_firestore.py  test_models.py  test_pubsub.py  test_secrets.py  test_storage.py
tests/integration/: test_production_pipeline.py
tests/mood_board/: __init__.py  test_moodboard.py
tests/mood_board_director/: __init__.py  test_moodboard.py
tests/post_scheduler/: test_scheduler.py
tests/publisher/: test_publisher.py
tests/qa_inspector/: test_qa_inspector.py
tests/sage/: __init__.py  test_sage.py
tests/scriptwriter/: __init__.py  test_scriptwriter.py
tests/trend_injector/: __init__.py  test_trend_injector.py
tests/video_producer/: __init__.py  test_videoproducer.py
tests/virtual_tryon/: __init__.py  test_tryon.py
(+41 files in other folders)
